# log-decorator

./: .gitignore  README.md  pyproject.toml  test.py
src/log_decorator/: __init__.py  core.py
