[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log-decorator"
version = "0.1.0"
authors = [
  { name = "Bruno Sardou", email = "bruno.sardou@outlook.com" },
]
description = "Um decorador de logging flexível para Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "loguru>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/bruno-sardou/log-decorator"
"Bug Tracker" = "https://github.com/bruno-sardou/log-decorator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/log_decorator"]